Collect-TV-20180201/src/objects/Tech_Net__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Tech_Net</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alignment_Service_or_Wheel_Alignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alignment Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_on_Find_Your_Shop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available on Find Your Shop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCDB_Account_Id__c</fullName>
        <formula>Account_Name__r.CCDB_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collision_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collision Repair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Service_Computer_Diagnosti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diesel_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diesel Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driving_Directions__c</fullName>
        <label>Website Driving Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Electrical_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Repair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heavy_Duty_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heavy Duty Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hybrid_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hybrid Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lyft_Participant__c</fullName>
        <label>Lyft Participant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RV_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RV Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Road_Hazard_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will identify whether or not a TECHNET shop is a participant in the Road Hazard program.</description>
        <label>Road Hazard Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shuttle_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shuttle Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Inspections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Inspections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synchrony_Car_Care_Merchant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will identify whether or not a shop is a member of the Synchrony Car Care program.</description>
        <label>Synchrony Car Care Merchant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synchrony_Car_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchrony Car Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_36_36_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>36/36 Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_ASE_Certified_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASE Certified Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_BBB_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BBB Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_Badges_Active__c</fullName>
        <formula>IF(TNET_36_36_Badge__c, 1, 0) +
IF(TNET_ASE_Certified_Badge__c, 1, 0) +
IF(TNET_BBB_Badge__c, 1, 0) +
IF(TNET_MAP_Badge__c, 1, 0) +
IF(TNET_RepairPal_Badge__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Badges Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TNET_Geo_Call_Status__c</fullName>
        <label>TNET Geo Call Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_Geo_Location__c</fullName>
        <label>TNET Geo Location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>TNET_MAP_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAP Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_More_Shop_Info__c</fullName>
        <label>More Shop Info</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TNET_RepairPal_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RepairPal Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_Service_Details__c</fullName>
        <label>Service Details</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tire_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tire Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Towing_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Towing Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_City__c</fullName>
        <label>Website City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Country__c</fullName>
        <label>Website Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Display_Name__c</fullName>
        <label>Website Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Primary_Phone__c</fullName>
        <label>​Website Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website_State_Province__c</fullName>
        <label>Website State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_Street__c</fullName>
        <label>Website Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Zip_Postal_Code__c</fullName>
        <label>Website Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X36_36_Effective_Date__c</fullName>
        <description>This field identifies the extender effective date for those members that are enrolled in the 36/36 Warranty program</description>
        <label>36/36 Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X36_36_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox identifies which TECHNET members are enrolled in 36/36 vs. those that are not.</description>
        <label>36/36 Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <label>TECH-NET</label>
    <nameField>
        <displayFormat>TECH-NET--{MM}{YYYY}-{0}</displayFormat>
        <label>TECH-NET Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>